# invoice_microservice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  demo.json  dev  out.txt
src/: .main.rs  file.rs  invoice.rs  main copy.rs  main.rs  szamlazzhu.rs
src/backup/: file.rs  invoice.rs  main.rs  prelude.rs  szamlazzhu.rs
