[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "invoice_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
futures = "*"
futures-lite = "1.11.3"
gzlib = "*"
log = "0.4"
packman = "*"
pretty_env_logger = "0.3"
quick-xml = {version = "0.17", features = ["serialize"]}
reqwest = "0.11.2"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
tonic = "0.4.1"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
